2013-04-12  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_info::check): Drop PC_KEEP_HANDLE flag for
	unrecognized reparse points as well.  Reorganize code and comments
	handling reparse points for better readability.

2013-04-11  Corinna Vinschen  <corinna@vinschen.de>

	* hires.h (hires_ns::nsecs): Declare with bool parameter.
	* times.cc (hires_ns::nsecs): Take bool parameter.  If set to true,
	don't use prime value (== return system wide absolute value).

2013-04-08  Christopher Faylor  <me.cygwin2013@cgf.cx>

	* cygtls.h (_cygtls::reset_signal_arrived): Actually reset the
	signal_arrived event.
	(_cygtls::handle_SIGCONT): Declare new function.
	* cygwait.cc (is_cw_sig_handle): Delete.
	(is_cw_sig_cont): New convenience define.
	(cygwait): Clear signal if is_cw_sig_cont and we got a SIGCONT.
	* cygwait.h (cw_wait_mask): Add cw_sig_cont.
	* exceptions.cc (sig_handle_tty_stop): Tighten "incyg" region.  Use
	cw_sig_cont param for cygwait.  Don't zero signal here outside of lock.
	(sigpacket::setup_handler): Don't check for in_forkee since we will now
	never get here in that state.
	(_cygtls::handle_SIGCONT): Define new function.
	(sigpacket::process): Call handle_SIGCONT early to deal with SIGCONT.
	Nuke continue_now handling.  Allow SIGKILL to kill a suspended process.
	Delete a couple of now-unneeded labels.
	(_cygtls::call_signal_handler): Reorganize setting of incyg within
	lock.
	* sigproc.cc (pending_signals): Simplify.
	(pending_signals::clear): New method.
	(_cygtls::remove_wq): Reorganize to always close wq.thread_ev if it
	exists to avoid handle leaks.
	(sig_clear): Simplify by just calling sigq.clear().
	(sig_dispatch_pending): Always call sigq.pending even in signal thread
	to force another loop in wait_sig.
	(sig_send): Remove a "goto out" just before out: label.
	(pending_signals::add): Simplify.
	(pending_signals::del): Delete.
	(pending_signals::next): Delete.
	(wait_sig): Define variable q to be the start of the signal queue.